--- a/src/style.css
+++ b/src/style.css
@@ -109,3 +109,8 @@ body {
   font-weight: bold;
   text-transform: capitalize;
 }
+footer {
+  color: #ffffff; 
+  height:20px; 
+  text-align:center; 
+}
